fixed bug with 1px jump on events page

--- a/htdocs/t/event.css
+++ b/htdocs/t/event.css
@@ -1,6 +1,6 @@
 #overlay { position: absolute; left: 0; top: 0; width: 100%; height: 100%; background-color: #000; opacity: 0.75; }
 
-.timeline {width:958px; /*two pixels preserved for left and right borders*/ margin-bottom: 32px; /*-1 px for crazy border (fkn. cut corners)*/}
+.timeline {display: none; width:958px; /*two pixels preserved for left and right borders*/ margin-bottom: 32px; /*-1 px for crazy border (fkn. cut corners)*/}
 .timeline .b-title{padding-bottom:10px; margin-bottom: 18px; height: 26px;}
 .timeline .b-title h1{font-size:20px; margin-left:-1px;}
 .timeline .body-wrapper{padding-bottom:0; height:220px;}
@@ -30,7 +30,7 @@ html.loading .previews .viewport .surface { display: none; }
 
 .previews .event .mark { position: absolute; left: 77px; top: 166px; width: 25px; height: 14px; background: url(/t/event/mark.png); }
 
-#both-wrapper { padding: 1px 0; clear: both; overflow: hidden; }
+#both-wrapper { padding: 1px 0; clear: both; overflow: hidden; position:relative; top:-1px;}
 #both-wrapper .body-wrapper { overflow: hidden; }
 
 .column-main-container {  }
